--- a/.gitignore
+++ b/.gitignore
@@ -133,3 +133,12 @@ sandpile_modelold.py
 temp.py
 animation.mp4
 data/data_N_10000_GS_20_n_2_GO_[0.5, 0.5]_CR_[4, 4]_ADD_position_INIT_random_B_False.pickle
+6_3.mp4
+6_4.mp4
+.gitignore
+.gitignore
+.gitignore
+avalanches_Trim_Slomo.mp4
+avalanches_Trim.mp4
+avalanches.mp4
+Sandpile_Presentation.pptx
